@@ -77,14 +77,6 @@ message Reader {
 
   int32 max_files_to_load = 1000;
 
-  //------------- start of only for partitioned data sets ------------------
-  bool is_partitioned = 300;
-  double partition_overlap = 301;
-  int32 partition_mode = 302;
-       // 1 - share a portion of your data with two neighbors;
-       // 2 - there's a set of overlap indices that are common to all models
-  //------------- end of only for partitioned data sets ------------------
-
   //------------- start of only for sample lists ------------------
   bool sample_list_per_trainer = 400;
   bool sample_list_per_model   = 401;
