@@ -24,6 +24,9 @@ Internal features:
 I/O & data readers:
  - Experimental data reader that generates graph random walks with
    HavoqGT
+ - Added explict tournament execution mode
+ - Added support to split training data reader into validation and
+   tournament readers
 
 Build system:
  - Hydrogen v1.5.0
@@ -40,6 +43,10 @@ Bug fixes:
  - Fixed the data coordinator's interface to input_layer
 
 Retired features:
+ - Removed deprecated JAG leader mode which was made obsolete when the
+   data reader moved into the data coordinator
+ - Removed the deprecated partitioned data reader modes that were used
+   to partition and overlap data sets for multiple models
 
 ============================== Release Notes: v0.101 ==============================
 
